# Bitbox

./: .gitignore  README.md  SECURITY.md  det.sh  docker-compose.yaml  kube_install.sh
Backend/: Dockerfile  docker-compose.yaml  entrypoint.sh
Backend/auth_service/: .gitignore  Cargo.toml  Dockerfile
Backend/auth_service/src/: guard.rs  handlers.rs  lib.rs  main.rs  models  models.rs  utils  utils.rs
Backend/class_and_group_service/src/: lib.rs  models.rs
Backend/common/: .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  models.rs  shema.rs
Backend/common/migrations/: diesel.toml
Backend/common/migrations/2024-06-25-214716_create_users_table/: up.sql
Backend/common/migrations/2024-06-25-215008_create_classes_table/: down.sql  up.sql
Backend/common/migrations/2024-06-25-222544_create_evaluation_results_table/: down.sql  up.sql
Backend/common/migrations/2024-06-25-222544_create_evaluations_table/: down.sql  up.sql
Backend/common/migrations/2024-06-25-222544_create_group_members_table/: down.sql  up.sql
Backend/common/migrations/2024-06-25-222544_create_groups_table/: down.sql  up.sql
Backend/common/migrations/2024-06-25-222544_create_notifications_table/: down.sql  up.sql
Backend/common/migrations/2024-06-25-222544_create_peer_evaluations_table/: down.sql  up.sql
Backend/common/migrations/2024-06-25-222544_create_projects_table/: up.sql
Backend/common/migrations/2024-06-25-222544_create_reports_table/: down.sql  up.sql
Backend/common/migrations/2024-06-26-103329_create_role_type/: down.sql  up.sql
Backend/common/migrations/2024-06-26-130801_create_users_table/: down.sql  up.sql
Backend/common/migrations/2024-06-26-130900_create_classes_table/: up.sql
Backend/common/migrations/2024-06-26-131038_create_classes_table/: down.sql  up.sql
Backend/common/migrations/2024-06-26-131047_create_projects_table/: down.sql  up.sql
Backend/common/migrations/2024-06-26-131456_create_groups_table/: down.sql  up.sql
Backend/common/migrations/2024-06-26-132133_create_group_members_table/: down.sql
Backend/common/migrations/2024-06-26-151003_create_class_users_table/: down.sql  up.sql
Backend/common/migrations/2024-06-26-151815_create_group_users_table/: down.sql  up.sql
Backend/common/migrations/2024-06-26-151909_create_evaluations_table/: down.sql  up.sql
Backend/common/migrations/2024-06-26-151935_create_notifications_table/: down.sql  up.sql
Backend/common/migrations/2024-06-26-153739_create_evaluation_results_table/: down.sql  up.sql
Backend/common/migrations/2024-06-29-194941_create_auth_tokens_table/: down.sql  up.sql
Backend/common/migrations/2024-07-04-011736_registration_links/: down.sql  up.sql
Backend/common/migrations/2024-07-12-124114_create_email_confirmations_table/: down.sql  up.sql
Backend/common/src/: constants.rs  db.rs  db_models.rs  lib.rs  models.rs  schema.rs  utils.rs
Backend/domain/: Cargo.toml  Dockerfile
Backend/domain/src/: models.rs  schema.rs
Backend/k8s/: configmap.yaml  secrets.yaml  service.yaml
Backend/teleport/: Dockerfile
Backend/user-service/: Cargo.toml  Dockerfile
Backend/user-service/src/: handlers.rs  lib.rs  models.rs
Backend/user_service/: Cargo.toml  Dockerfile
Backend/user_service/src/: guards.rs  handlers.rs  lib.rs  main.rs  routes.rs
db/:  docker-compose.yml
db/migrations/:  20230625_create_evaluations_table.sql  20230625_create_classes_table.sql  20230625_create_evaluation_results_table.sql  20230625_create_group_members_table.sql  20230625_create_groups_table.sql  20230625_create_notifications_table.sql  20230625_create_projects_table.sql  20230625_create_reports_table.sql  20230625_create_users_table.sql
k8s/: deployment.yaml  persistentvolumeclaim.yaml
scripts/: certbot_corfigure.sh
teleport/: Dockerfile  bitbox_postgres.yaml  bitbox_teleport.yaml
