[package]
name = "auth_service"
authors = ["sony-level <[email protected]>"]
version = "0.1.0"
edition = "2021"

# https://codevoweb.com/rust-implement-2fa-two-factor-authentication/#google_vignette

[dependencies]
rocket_codegen = "0.5.0-rc.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2.1", features = ["postgres" ,  "r2d2" ,"chrono" , "uuid" , "serde_json" ] }
dotenv = "0.15.0"
uuid = { version = "1.9.1", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
common  = { path = "../common" }
domain = { path = "../domain" }
bcrypt = "0.15.1"
sha2 = "0.10.8"
rocket_sync_db_pools = "0.1.0-rc.1"
otpauth = "0.4.1"
jsonwebtoken = "9.3.0"
schemars = { version = "0.8", features = ["chrono"] }
lettre = "0.11.7"
rocket_okapi_codegen = "0.8.0"
totp-rs = "5.5.1"
base32 = "0.5.0"
qrcodegen = "1.6.0"
google-authenticator = "0.4.2"
rocket_cors = "0.6.0"
once_cell = "1.8.0"
percent-encoding = "2.1.0"
rocket_contrib = "0.4.11"
utoipa = "5.0.0-alpha.0"
destructure_traitobject = "0.3.0"
base64 = "0.22.1"
qrcode = "0.14.1"
data-encoding = "2.6.0"
rand = "0.8.5"
argon2 = "0.6.0-pre.0"
utoipa-swagger-ui = "7.1.1-alpha.0"



[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json" , "uuid" ]

[dependencies.rocket_okapi]
version = "0.8.0"
features = ["rapidoc", "swagger"]

[[bin]]
name = "auth_service"
path = "src/main.rs"