[package]
name = "user-service"
version = "0.1.0"
authors = ["sony-level <contact@level.ovh>"]
edition = "2021"

[dependencies]
actix-web = "4.0.0-beta.8"
serde = {version = "1.0" , features = ["derive"]}
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["runtime-async-std", "macros"] }
dotenv = "0.15.0"
diesel = { version = "2.2.1", features = ["postgres", "r2d2"] }
uuid = { version = "1.9.1", features = ["v4"] }
chrono = "0.4.19"