[package]
name = "user_service"
version = "0.1.0"
authors = ["sony-level "]
edition = "2021"

[dependencies]
rocket_codegen = "0.5.0-rc.1"
serde = { version = "1.0.203", features = ["derive"] }  
serde_json = "1.0"
diesel = { version = "2.2.1", features = ["postgres" ,  "r2d2" ,"chrono" , "uuid" , "serde_json" ] }
dotenv = "0.15.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
common  = { path = "../common" }
domain = { path = "../domain" }
bcrypt = "0.15.1"
sha2 = "0.10.8"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json" , "uuid" ]