[package]
name = "user_service"
version = "0.1.0"
authors = ["sony-level "]
edition = "2021"

[dependencies]
rocket_codegen = "0.5.0-rc.1"
serde = { version = "1.0.203", features = ["derive"] }  
serde_json = "1.0"
diesel = { version = "2.2.1", features = ["postgres" ,  "r2d2" ,"chrono" , "uuid" , "serde_json" ] }
dotenv = "0.15.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
common  = { path = "../common" }
domain = { path = "../domain" }
auth_service = { path = "../auth_service" }
bcrypt = "0.15.1"
sha2 = "0.11.0-pre.3"
schemars = "1.0.0-alpha.2"
utoipa = "5.0.0-alpha.0"
destructure_traitobject = "0.3.0"
[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json" , "uuid" ]

[dependencies.rocket_okapi]
version = "0.8.0"
features = ["rapidoc" ]